--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 
     <div class="column">
         <aside>
-            <h2 class="score-board-list">Guess what letter I am thinking of...<span id="user-text"></span></h2>
            <div id="position-guess">
                 <p> 
                     <ul class="score-board-list">
+                        <li>Guess what letter I am thinking of...<span id="user-text"></span><br><br></li>
+                        
                         <li>Wins: <span id="winsAdded"></span></li>
                         <li>Losses: <span id="lossesAdded"></span></li>
                         <li>Guesses left: <span id="guessLeft"></span></li>
